# zts-vanity-address-gpu-generator

./: .gitignore  CMakeLists.txt  NOTICE  README.md  pubspec.yaml  run.sh  setup_ubuntu.sh
src/: bip39_words.cuh  main.cu
tools/: generate_bip39_header.js  validate_mnemonic.dart  validate_seed.dart
